--- a/render/package.json
+++ b/render/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "serial",
-  "version": "1.2.1",
+  "name": "chipmunk-serial-plugin",
+  "version": "1.2.2",
   "peerDependencies": {
-    "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0"
+    "@angular/common": "^9.0.6",
+    "@angular/core": "^9.0.6"
   }
 }
