--- a/render/package.json
+++ b/render/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chipmunk-serial-plugin",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "peerDependencies": {
-    "@angular/common": "^9.0.6",
-    "@angular/core": "^9.0.6"
+	  "@angular/common": "~12.2.1",
+	  "@angular/core": "~12.2.1"
   }
 }
